--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-werkzeug==1.0.0
-numpy==1.19.1
-gunicorn==19.9.0
-Flask==1.1.1
-h5py==2.9.0
+werkzeug=
+numpy
+gunicorn
+Flask
+h5py
 tensorflow
-pillow>=6.2.0
+pillow
 protobuf~=3.19.0
